--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        input {
+            display: block;
+            margin: 10px auto;
+            padding: 10px;
+            width: 250px;
+        }
+        button {
+            padding: 10px;
+            width: 150px;
+            cursor: pointer;
+        }
+        #message {
+            margin-top: 20px;
+            color: red;
+        }
+    </style>
 </head>
 <body>
+
     <h1>Welcome to My Blog</h1>
     <p>Sign up or log in below:</p>
-    
+
     <div>
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
@@ -54,5 +76,6 @@
             }
         }
     </script>
+
 </body>
 </html>
