--- a/index.html
+++ b/index.html
@@ -3,51 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>My Simple Blog</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
+            background: linear-gradient(to bottom, white, navy);
+            color: white;
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 50px;
+            margin: 0;
+            padding: 0;
         }
+
+        header {
+            padding: 20px;
+            background: rgba(0, 0, 50, 0.8);
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        footer {
+            padding: 10px;
+            background: rgba(0, 0, 50, 0.8);
+        }
+
+        .form-container {
+            max-width: 400px;
+            margin: 20px auto;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            color: black;
+            border-radius: 8px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
         input {
-            display: block;
-            margin: 10px auto;
+            width: 100%;
             padding: 10px;
-            width: 250px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
+
         button {
+            background-color: navy;
+            color: white;
             padding: 10px;
-            width: 150px;
+            width: 100%;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: darkblue;
+        }
+
+        .blog-container {
+            display: none;
+        }
+
+        .link {
+            margin-top: 10px;
+            color: navy;
             cursor: pointer;
         }
-        #message {
-            margin-top: 20px;
-            color: red;
+
+        .link:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
 
-    <h1>Welcome to My Blog</h1>
-    <p>Sign up or log in below:</p>
+    <header>
+        <h1>Andy's Blog</h1>
+        <p>Welcome to my personal blog!</p>
+    </header>
 
-    <div>
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
-        <button onclick="signup()">Sign Up</button>
-        <button onclick="login()">Log In</button>
-    </div>
+    <main>
+        <div id="loginSection" class="form-container">
+            <h2>Login</h2>
+            <form id="loginForm">
+                <input type="text" id="loginUsername" placeholder="Username" required>
+                <input type="password" id="loginPassword" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
+            <p id="loginMessage"></p>
+            <p class="link" onclick="showSignup()">Don't have an account? Sign up here</p>
+        </div>
 
-    <p id="message"></p>
+        <div id="signupSection" class="form-container" style="display: none;">
+            <h2>Sign Up</h2>
+            <form id="signupForm">
+                <input type="text" id="signupUsername" placeholder="Username" required>
+                <input type="password" id="signupPassword" placeholder="Password" required>
+                <button type="submit">Sign Up</button>
+            </form>
+            <p id="signupMessage"></p>
+            <p class="link" onclick="showLogin()">Already have an account? Log in here</p>
+        </div>
+
+        <div id="blogContent" class="blog-container">
+            <article>
+                <h2>This is My First Post!</h2>
+                <p>Posted on <strong>February 9, 2025</strong></p>
+                <p>Hello world! This is my first blog post. I'll be sharing my journey and thoughts here.</p>
+            </article>
+        </div>
+    </main>
+
+    <footer>
+        <p>© 2025 My Blog | All rights reserved.</p>
+    </footer>
 
     <script>
         const backendUrl = "https://project1-qahh.onrender.com";
 
-        async function signup() {
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
+        function showSignup() {
+            document.getElementById("loginSection").style.display = "none";
+            document.getElementById("signupSection").style.display = "block";
+        }
 
+        function showLogin() {
+            document.getElementById("signupSection").style.display = "none";
+            document.getElementById("loginSection").style.display = "block";
+        }
+
+        document.getElementById("signupForm").addEventListener("submit", async function(e) {
+            e.preventDefault();
+            const username = document.getElementById("signupUsername").value;
+            const password = document.getElementById("signupPassword").value;
+            
             const response = await fetch(`${backendUrl}/signup`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
@@ -55,13 +144,19 @@
             });
 
             const data = await response.json();
-            document.getElementById("message").innerText = data.message;
-        }
+            document.getElementById("signupMessage").innerText = data.message;
 
-        async function login() {
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
+            if (data.success) {
+                alert("Account created! Please log in.");
+                showLogin();
+            }
+        });
 
+        document.getElementById("loginForm").addEventListener("submit", async function(e) {
+            e.preventDefault();
+            const username = document.getElementById("loginUsername").value;
+            const password = document.getElementById("loginPassword").value;
+            
             const response = await fetch(`${backendUrl}/login`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
@@ -69,12 +164,22 @@
             });
 
             const data = await response.json();
-            document.getElementById("message").innerText = data.message;
+            document.getElementById("loginMessage").innerText = data.message;
 
             if (data.success) {
-                alert("Login successful!");
+                localStorage.setItem("authToken", data.token);
+                document.getElementById("loginSection").style.display = "none";
+                document.getElementById("blogContent").style.display = "block";
             }
-        }
+        });
+
+        window.onload = function() {
+            const token = localStorage.getItem("authToken");
+            if (token) {
+                document.getElementById("loginSection").style.display = "none";
+                document.getElementById("blogContent").style.display = "block";
+            }
+        };
     </script>
 
 </body>
