--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         <div id="blogContent" class="blog-container">
             <article>
                 <h2>This is My First Post!</h2>
-                <p>Posted on <strong>February 9, 2025</strong></p>
-                <p>Hello world! This is my first blog post. I'll be sharing my journey and thoughts here.</p>
+                <p style="color: #444;">Posted on <strong>February 9, 2025</strong></p>
+                <p style="color: #444;">Hello world! This is my first blog post. I'll be sharing my journey and thoughts here.</p>
             </article>
             <button id="logoutBtn" onclick="logout()">Logout</button>
         </div>
