--- a/index.html
+++ b/index.html
@@ -4,85 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Blog</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background: linear-gradient(to bottom, white, navy);
-            color: white;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            padding: 20px;
-            background: rgba(0, 0, 50, 0.8);
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        footer {
-            padding: 10px;
-            background: rgba(0, 0, 50, 0.8);
-        }
-
-        .form-container {
-            max-width: 400px;
-            margin: 20px auto;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.9);
-            color: black;
-            border-radius: 8px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-        }
-
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        button {
-            background-color: navy;
-            color: white;
-            padding: 10px;
-            width: 100%;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        button:hover {
-            background-color: darkblue;
-        }
-
-        .blog-container {
-            display: none;
-        }
-
-        .link {
-            margin-top: 10px;
-            color: navy;
-            cursor: pointer;
-        }
-
-        .link:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.min.css">
 </head>
 <body>
-
     <header>
         <h1>Andy's Blog</h1>
         <p>Welcome to my personal blog!</p>
     </header>
-
     <main>
         <div id="loginSection" class="form-container">
             <h2>Login</h2>
@@ -94,8 +22,7 @@
             <p id="loginMessage"></p>
             <p class="link" onclick="showSignup()">Don't have an account? Sign up here</p>
         </div>
-
-        <div id="signupSection" class="form-container" style="display: none;">
+        <div id="signupSection" class="form-container" style="display:none;">
             <h2>Sign Up</h2>
             <form id="signupForm">
                 <input type="text" id="signupUsername" placeholder="Username" required>
@@ -105,7 +32,6 @@
             <p id="signupMessage"></p>
             <p class="link" onclick="showLogin()">Already have an account? Log in here</p>
         </div>
-
         <div id="blogContent" class="blog-container">
             <article>
                 <h2>This is My First Post!</h2>
@@ -115,85 +41,15 @@
             <button id="logoutBtn" onclick="logout()">Logout</button>
         </div>
     </main>
-
     <footer>
         <p>© 2025 My Blog | All rights reserved.</p>
     </footer>
-
     <script>
-        const backendUrl = "https://project1-qahh.onrender.com"; // Change to "http://localhost:5050" for local testing
-
-        function sanitizeInput(input) {
-            return input.replace(/</g, "&lt;").replace(/>/g, "&gt;");
-        }
-
-        function showSignup() {
-            document.getElementById("loginSection").style.display = "none";
-            document.getElementById("signupSection").style.display = "block";
-        }
-
-        function showLogin() {
-            document.getElementById("signupSection").style.display = "none";
-            document.getElementById("loginSection").style.display = "block";
-        }
-
-        window.onload = function() {
-            const token = localStorage.getItem("authToken");
-            if (token) {
-                document.getElementById("loginSection").style.display = "none";
-                document.getElementById("blogContent").style.display = "block";
-            } else {
-                document.getElementById("loginSection").style.display = "block";
-                document.getElementById("blogContent").style.display = "none";
-            }
-        };
-
-        document.getElementById("signupForm").addEventListener("submit", async function(e) {
-            e.preventDefault();
-            const username = sanitizeInput(document.getElementById("signupUsername").value);
-            const password = sanitizeInput(document.getElementById("signupPassword").value);
-            
-            const response = await fetch(`${backendUrl}/signup`, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ username, password })
-            });
-
-            const data = await response.json();
-            document.getElementById("signupMessage").innerText = data.message;
-
-            if (data.success) {
-                alert("Account created! Please log in.");
-                showLogin();
-            }
-        });
-
-        document.getElementById("loginForm").addEventListener("submit", async function(e) {
-            e.preventDefault();
-            const username = sanitizeInput(document.getElementById("loginUsername").value);
-            const password = sanitizeInput(document.getElementById("loginPassword").value);
-            
-            const response = await fetch(`${backendUrl}/login`, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ username, password })
-            });
-
-            const data = await response.json();
-            document.getElementById("loginMessage").innerText = data.message;
-
-            if (data.success) {
-                localStorage.setItem("authToken", data.token);
-                document.getElementById("loginSection").style.display = "none";
-                document.getElementById("blogContent").style.display = "block";
-            }
-        });
-
-        function logout() {
-            localStorage.removeItem("authToken");
-            location.reload();
-        }
+        const backendUrl="https://project1-qahh.onrender.com";
+        function sanitizeInput(e){return e.replace(/</g,"&lt;").replace(/>/g,"&gt;")}
+        function showSignup(){document.getElementById("loginSection").style.display="none",document.getElementById("signupSection").style.display="block"}
+        function showLogin(){document.getElementById("signupSection").style.display="none",document.getElementById("loginSection").style.display="block"}
+        window.onload=function(){localStorage.getItem("authToken")?(document.getElementById("loginSection").style.display="none",document.getElementById("blogContent").style.display="block"):document.getElementById("blogContent").style.display="none"}
     </script>
-
 </body>
 </html>
