--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Blog</title>
     <link rel="stylesheet" href="styles.css">
     
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WFNDXTD7HE"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
