--- a/index.html
+++ b/index.html
@@ -55,16 +55,14 @@
         </div>
     </main>
 
-    <footer>
-        <p>© 2025 My Blog | All rights reserved.</p>
-    </footer>
+
 
     <script>
         const backendUrl = "https://project1-qahh.onrender.com";
 
         let loginAttempts = 0;
         const maxAttempts = 5;
-        const resetTime = 15 * 60 * 1000; // 15 minutes
+        const resetTime = 30 * 1000; 
 
         function sanitizeInput(e) {
             return e.replace(/</g, "&lt;").replace(/>/g, "&gt;");
@@ -144,7 +142,7 @@
             }
 
             setTimeout(() => {
-                loginAttempts = 0; // Reset after 15 minutes
+                loginAttempts = 0; 
             }, resetTime);
         });
 
