--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <link rel="stylesheet" href="styles.css">
     
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WFNDXTD7HE"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-WFNDXTD7HE');
-    </script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WFNDXTD7HE', { 'debug_mode': true });
+
+    gtag('event', 'page_view', {
+        page_title: document.title,
+        page_path: window.location.pathname,
+        page_location: window.location.href
+    });
+</script>
+
+
 </head>
 <body>
     <header>
