--- a/index.html
+++ b/index.html
@@ -5,20 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
     <link rel="stylesheet" href="styles.css">
-    
+
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WFNDXTD7HE"></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-WFNDXTD7HE', { 'debug_mode': true });
-
-    gtag('event', 'page_view', {
-        page_title: document.title,
-        page_path: window.location.pathname,
-        page_location: window.location.href
-    });
+  gtag('config', 'G-WFNDXTD7HE');
 </script>
 
 
